# django-candy

./: .gitignore  README.md  setup.cfg
django_candy/: admin.py  apps.py  middleware.py  serializers.py  urls.py  utils.py  views.py
django_candy/static/django_candy/css/: main.440742cd.chunk.css  main.440742cd.chunk.css.map  main.fc03b0f5.chunk.css  main.fc03b0f5.chunk.css.map
django_candy/static/django_candy/js/: 2.1df3973a.chunk.js  2.1df3973a.chunk.js.map  2.45b35550.chunk.js  2.45b35550.chunk.js.map  2.a019c9d4.chunk.js  2.a019c9d4.chunk.js.map  3.200d5aab.chunk.js  3.200d5aab.chunk.js.map  3.40dbe70a.chunk.js  3.40dbe70a.chunk.js.map  3.af5de86f.chunk.js  3.af5de86f.chunk.js.map  main.148552de.chunk.js  main.148552de.chunk.js.map  main.2a5da451.chunk.js  main.2a5da451.chunk.js.map  main.4c478b76.chunk.js  main.4c478b76.chunk.js.map  runtime-main.17248901.js  runtime-main.17248901.js.map  runtime-main.a23fe7a9.js  runtime-main.a23fe7a9.js.map  runtime-main.c06f1ecb.js  runtime-main.c06f1ecb.js.map
django_candy/templates/django_candy/: index.html
docs/: api.rst  conf.py  customise.rst  differences.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docs/_static/: candy.css
docs/releases/: index.rst  v0.7.1.rst  v0.7.2.rst
